# University

./: .gitignore  README.md
3 course/Летняя практика/: LMS.docx  ~$рскуков отчет практика.docx  Барскуков отчет практика.docx  Ссылки.xlsx
Latex/: biblist.tex
Latex Gost/: analytical.aux  listings.inc.aux  main.tex  supplement.aux
Latex Settings/: biblist.aux  concl.aux  design.aux  exper.aux  main (2).out  main (2).synctex  techn.aux  title.aux
bachelor/Diplom/: NIR.pptx
bachelor/IIV/Летняя практика/: Барсуков Н.М Отзыв.docx  Задание Барсуков.docx
bachelor/IV/EP/: README.md
bachelor/IV/Modelling/: README.md
bachelor/IV/Network/: document.7z
bachelor/IV/OS/: .built-in.a.cmd  CMakeLists.txt
bachelor/IV/OS/module/: CMakeLists.txt
bachelor/IV/OS/report/: analytical.aux  analytical.blg  analytical.tex  biblist.aux  biblist.tex  concl.aux  concl.tex  design.aux  design.tex  exper.aux  intro.aux  intro.tex  listings.inc.tex  main.aux  main.out  main.toc  preamble.tex  supplement.aux  supplement.tex  techn.aux  techn.tex  title.tex
bachelor/IV/OS/report/src/: Barsukov.docx
bachelor/IV/OS/report/src/code/: my_vdev.c  my_vdev.h
bachelor/IV/OS/report/src/shemas/: irq_proceed.graphml
bachelor/IV/Philosofia/: 11- 20.docx  Ответы.docx
bachelor/IV/SetiCourse/: analytical.aux  analytical.tex  biblist.aux  biblist.tex  concl.aux  concl.tex  design.aux  design.tex  exper.aux  intro.aux  intro.tex  main.out  main.tex  main.toc  ref.aux  ref.tex  supplement.aux  techn.aux  techn.tex  title.tex
bachelor/IV/WEB/: IU7-билеты.docx
Латех настройки/: desktop.ini  main (2).toc
(+488 files in other folders)
